Ajustar modelos y dimensiones

--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -28,6 +28,22 @@
     window.d = "{{d}}"
     window.e = "{{e}}"
     window.f = "{{f}}"
+    window.r1_1 = "{{r1_1}}"
+    window.r2_1 = "{{r2_1}}"
+    window.r3_1 = "{{r3_1}}"
+    window.c1_1 = "{{c1_1}}"
+    window.c2_1 = "{{c2_1}}"
+    window.p_w1_1 = "{{p_w1_1}}"
+    window.p_w2_1 = "{{p_w2_1}}"
+    window.p_w3_1 = "{{p_w3_1}}"
+    window.r1_2 = "{{r1_2}}"
+    window.r2_2 = "{{r2_2}}"
+    window.r3_2 = "{{r3_2}}"
+    window.r4_2 = "{{r4_2}}"
+    window.r5_2 = "{{r5_2}}"
+    window.p_w1_2 = "{{p_w1_2}}"
+    window.p_w2_2 = "{{p_w2_2}}"
+    window.p_w3_2 = "{{p_w3_2}}"
     </script>
   </head>
   <body>
